# structured-dev-template

./: .env.example  .envrc  .gitignore  LICENSE  README.md  build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  setup-ssh.sh  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: Dockerfile  Dockerfile.dev  Dockerfile.prod  main.py  pyproject.toml
